
  [ Damyan Ivanov ]
  * Packaging.pm: extend the examples regular expression to match demo/demos.
    Thanks to Kevin Ryde. Closes: #634932
  * add pristine-tar to Recommends. Thanks to Tim.
  * fix t/debian-version.t to not plan twice in case debian/changelog does not
    exist (e.g. when testing the CPAN distribution, which lacks debian/ stuff)
    RT#66214

  [ gregor herrmann ]
  * Update created Vcs-Browser URLs for Debian Perl Group repositories.
  * Change URLs for DEP5 Format-Specification to point to
    http://anonscm.debian.org.

  [ Ansgar Burchardt ]
  * debian/control: Convert Vcs-* fields to Git.
  * DhMakePerl::Config: Change default VCS to Git.

  [ Salvatore Bonaccorso ]
  * Debian::AptContents: Fix typo in POD.

  [ Maximilian Gass ]
  * Fix Debian::AptContents for file name changes in apt-file 2.5.0
  * debian/control: Change Recommends on apt-file to versioned Recommends on 
    apt-file (>= 2.5.0).

 -- Damyan Ivanov <dmn@debian.org>  Thu, 21 Jul 2011 20:58:01 +0200

dh-make-perl (0.73-1) unstable; urgency=low

  [ gregor herrmann ]
  * Build.PL: add missing modules.
  * Update copyright notices.
  * Debian::Control::Stanza::Source: add XS-Autobuild field; mention all
    fields in POD, and sort list.

  [ Salvatore Bonaccorso ]
  * create packages with Standards-Version 3.9.2.
  * Bump Standards-Version to 3.9.2. 
  * Debian::Control::Stanza::Source: Add DM-Upload-Allowed field to
    supported fields for source stanza in debian/control.
  * Debian::Control::Stanza::Source: Order fields similar to dh_make generated
    templates.

  [ Nicholas Bamber ]
  * Updated authorship notice

  [ Damyan Ivanov ]
  * Add --vcs option, guiding VCS-* headers' creation in --pkg-perl mode. It
    also helps with the initial repository creation for Git
  * Do not die when the WNPP cache cannot be read, for example due to binary
    format change in Storable. Also, use platform-independent storage.